ix(api): return empty 204 response for soft delete
